--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "waterlabel-client-v2",
-  "version": "1.0.0-0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
