--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ]
   },
   "proxy": "http://0.0.0.0:5050/"
