Add map to desktop and mobile tile.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.6",
   "private": true,
   "dependencies": {
+    "leaflet": "^1.6.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-leaflet": "^2.6.1",
     "react-md-spinner": "^1.0.0",
     "react-scripts": "3.0.1",
     "release-it": "^12.3.2"
